More fixes in html templates

--- a/html/list.html
+++ b/html/list.html
@@ -45,8 +45,8 @@
           </nav><!-- /.navbar -->
       </header>
 
-      <div class="row">
-        <main class="col-xs-12" aria-labelledby="newsheader">
+      <main class="row" aria-labelledby="newsheader">
+        <div class="col-xs-12">
 
             <header id="newsheader">
                 <h1>Лента новостей</h1>
@@ -106,8 +106,8 @@
                 </section>
             </article>
 
-        </main>
-      </div>
+        </div>
+      </main>
 
       <aside class="row">
         <nav class="listnav col-xs-12" aria-label="Навигация по ленте новостей">
@@ -147,9 +147,9 @@
         </nav>
       </aside>
 
-      <div class="row">
-        <footer class="col-xs-12">2016 &copy; Acme News</footer>
-      </div>
+      <footer class="row">
+        <div class="col-xs-12">2016 &copy; Acme News</div>
+      </footer>
 
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
